[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmartins-toolbox"
version = "0.1.0"
description = "CLI toolkit: Gemini AI tools (image, TTS, video), Slack client, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Márcio Martins", email = "marcioapm@gmail.com" }
]
dependencies = ["click>=8.0"]
keywords = ["cli", "gemini", "ai", "tts", "image-generation", "video-generation", "slack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/marcioapm/toolbox"
Repository = "https://github.com/marcioapm/toolbox"

[project.scripts]
gemini-image = "toolbox.gemini_image:main"
gemini-tts = "toolbox.gemini_tts:main"
gemini-video = "toolbox.gemini_video:main"
slackcli = "toolbox.slackcli:main"

[tool.setuptools.packages.find]
where = ["src"]
